<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/hello"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/last_name"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"

            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/conditions" />


        <Button
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_in"
            android:textColor="@color/dustyWhite" />

        <Button
            android:layout_width="66dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_button"
            android:text="Omitir"
            android:id="@+id/buttono"
            android:textColor="@color/dustyWhite" />

    </LinearLayout>

</LinearLayout>